cleanup of tags, fixed categories bug where the permissions check was not wrapped around the edit button
git-svn-id: http://svn.apostrophenow.org/plugins/apostropheBlogPlugin/trunk@1750 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/aBlog.css
+++ b/web/css/aBlog.css
@@ -474,6 +474,12 @@ border-radius: 3px;
 width: 118px
 }
 
+.a-admin-sidebar input.add-text.tag-input
+{
+	margin-top: -1px;
+	width: 134px;
+}
+
 .a-admin-sidebar .section.tags .a-admin-form-field-tags
 {
 margin-top: 10px;
